--- a/templates/paper.html
+++ b/templates/paper.html
@@ -74,26 +74,30 @@
 <!-- END PAPER -->
 
 <!--START FOOTER-->
-<footer class="footer bg-light" style="position: fixed; bottom: 0; width: 100%;">
+<section class="section" id="footer">
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-md-12">
                 <div class="text-center text-white footer-alt">
-                    <!-- <ul class="list-unstyled list-inline mb-3">
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook text-muted"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-pinterest text-muted"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li>
-                        </ul> -->
+                    <div class="text-center col-lg-12">
+                        <img src="/static/images/uoft.png" style="width: 15%;"></img>
+                        <img src="/static/images/vector.png" style="width: 15%;"></img>
+                    </div>
+                    <br>
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
+                    <ul class="list-unstyled list-inline mb-3">
+                        <li class="list-inline-item"><a href="#"><i class="mdi mdi-email text-muted"></i></a>
+                        </li>
+                        <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
+                        </li> -->
+                        <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-pinterest text-muted"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li> -->
+                    </ul>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+</section>
 <!--END FOOTER-->
 
 {% endblock %}
