--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="paper.html">Paper</a>
                 </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="demo.html">Demo</a>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -98,11 +101,12 @@
                     to fetch subset of data that is most relevant to their own target domains. Neural Data Server
                     indexes several popular Machine Learning datasets in its quest to server optimal data to ML users.
                 </p>
-                <p class="text-muted mt-2">Watch the short video below on how it works.</p>
+                <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. Also checkout a
+                    2 minute <a href="https://youtu.be/I308xDHVgU4">demo video</a> on using of our platform.</p>
                 <br>
                 <div class="mt-3 text-center">
                     <video width="80%" controls>
-                        <source src="/static/images/NeuralDataServer.mp4" type="video/mp4">
+                        <source src="/static/images/NeuralDataServerVoice.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <br>
@@ -133,7 +137,7 @@
                 <div class="text-center">
                     <h2>1. NDS <span class="font-weight-bold">Dataset Registry</span></h2>
                     <p class="text-muted mx-auto section-subtitle mt-3">Check out our datasets we current supports. You
-                        can optionally hover and download experts for local adaptation.</p>
+                        can optionally hover and download experts for adapting locally.</p>
                 </div>
             </div>
         </div>
@@ -171,7 +175,7 @@
                             <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div> -->
                     </div>
-                    <p><a href="https://storage.googleapis.com/openimages/web/index.html">View Dataset</a></p>
+                    <!-- <p><a href="https://storage.googleapis.com/openimages/web/index.html">View Dataset</a></p> -->
                     <p><b>License: </b>CC-by 4.0</p>
                 </div>
             </div>
@@ -193,7 +197,7 @@
                             </div>
                         </div>
                     </div>
-                    <p><a href="http://cocodataset.org/#home">View Dataset</a></p>
+                    <!-- <p><a href="http://cocodataset.org/#home">View Dataset</a></p> -->
                     <p><b>License: </b>CC-by 4.0</p>
                 </div>
             </div>
@@ -212,7 +216,7 @@
                                     Experts</button></div>
                         </div>
                     </div>
-                    <p><a href="http://www.image-net.org/">View Dataset</a></p>
+                    <!-- <p><a href="http://www.image-net.org/">View Dataset</a></p> -->
                     <p><b>Copyright: </b><a href="http://image-net.org/download-faq">Terms</a></p>
                 </div>
             </div>
@@ -325,10 +329,11 @@
             <div class="col-lg-12">
                 <svg width="960" height="650"></svg>
             </div>
-            <p>Force Directed Graph of dataset clusters, showing transfer performance measured by fast adaptation
-                for each dataset
-                clusters. The centre node represents target dataset, the width and distance of each edge represent is
-                related to how relevant the source cluster is related to the target dataset (closer=better).</p>
+            <p>Force Directed Graph of dataset clusters, showing transfer performance measured from fast adaptation.
+                The centre
+                node represents your target dataset, the other nodes represent each expert trained on a particular
+                source dataset cluster. Closer nodes imply higher relevancy to your dataset.
+            </p>
         </div>
     </div>
 </section>
