--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                     indexes several popular Machine Learning datasets in its quest to server optimal data to ML users.
                 </p>
                 <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. Also checkout a
-                    2 minute <a href="https://youtu.be/I308xDHVgU4">demo video</a> on using of our platform.</p>
+                    2 minute <a href="https://youtu.be/I308xDHVgU4", target="_blank">demo video</a> on using of our platform.</p>
                 <br>
                 <div class="mt-3 text-center">
                     <video width="80%" controls>
