--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="paper.html">Paper</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="demo.html">Demo</a>
+                </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="demo.html">Demo</a>
                 </li> -->
