--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="paper.html">Demo</a>
+                    <a class="nav-link" href="contribute.html">Contribute</a>
                 </li>
             </ul>
         </div>
@@ -39,41 +39,28 @@
 </nav>
 <!-- End Navbar -->
 
-<!-- START ABSTRACT -->
 <section class="section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2><span class="font-weight-bold">Instruction</span></h2>
-                    <p class="text-muted mt-2">Watch the 2 minute video below on how to use our
-                        platform.</p>
-                    <div class='embed-container'><iframe src='https://www.youtube-nocookie.com/embed/I308xDHVgU4'
-                            frameborder='0'
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe></div>
-                    <!-- <p class="text-muted mt-2">Transfer learning has proven to be a successful way to train high performing
-                    deep learning models in various applications for which little labeled data is available. In transfer
-                    learning, one pre-trains the model on a large dataset such as Imagenet or MS-COCO, and fine-tunes
-                    its weights on the target domain. In our work, we claim that in the new era of ever increasing
-                    number of massive datasets, selecting the relevant pre-training data itself is a critical issue. We
-                    introduce a new problem in which available datasets are stored in one centralized location, i.e., a
-                    dataserver. We assume that a client, a target application with its own small labeled dataset, is
-                    only interested in fetching a subset of the server’s data that is most relevant to its own target
-                    domain. We propose a novel method that aims to optimally select subsets of data from the dataserver
-                    given a particular target client. We perform data selection by employing a mixture of experts model
-                    in a series of dataserver- client transactions with a small computational cost. We show the
-                    effectiveness of our work in several transfer learning scenarios, demonstrating state-of-the-art
-                    per- formance on several target datasets and tasks such as image classification, object detection
-                    and instance segmentation. We will make our framework available as a web-service, serving data to
-                    users trying to improve performance in their A.I. application.
-                </p> -->
+                    <h2><span class="font-weight-bold">Contribute</span></h2>
                 </div>
+            </div>
+            <div class="col-lg-12">
+                <h4 class="mt-4">Call for <span class="text-custom font-weight-bold">Datasets.</span></h4>
+                <p class="text-muted mt=2">Help grow NDS dataset registry by registering your dataset.
+                    <a href="https://forms.gle/5GYFuSZ1emjQGwKH7">Please see instructions.</a></p>
+            </div>
+            <div class="col-lg-12">
+                <h4 class="mt-4">Call for <span class="text-custom font-weight-bold">Algorithms.</span></h4>
+                <p class="text-muted mt-2">We welcome all contributions including better algorithms, extensions, or
+                    suggestions for improvements. Let us know at <a href="mailto:nds@cs.toronto.edu" ,
+                        target="_blank">nds@cs.toronto.edu</a>.</p>
             </div>
         </div>
     </div>
 </section>
-<!-- END PAPER -->
 
 <!--START FOOTER-->
 <section class="section" id="footer">
