--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="#abstract">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#dataset">Dataset Experts</a>
+                    <a class="nav-link" href="#dataset">Dataset Registry</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#fast-adapt">Fast Adapt</a>
@@ -43,14 +43,14 @@
                     <a class="nav-link" href="#download-subset">Download Subset</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="paper.html">Paper</a>
+                    <a class="nav-link" href="paper.html">Paper and Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="demo.html">Demo</a>
+                    <a class="nav-link" href="demo.html">Instructions</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="demo.html">Demo</a>
-                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="contribute.html">Contribute</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -68,7 +68,9 @@
                         <div class="text-center header-content mx-auto">
                             <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
-                            <p class="text-white mx-auto header-desc mt-1">Find Best Data to Pre-Train Your Deep Neural
+                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 150%;">A.I.-Powered Search Engine for Finding
+                                Best
+                                Data to Pre-Train Your Deep Neural
                                 Models
                             </p>
                             <div class="mt-4 pt-2">
@@ -89,7 +91,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2><span class="font-weight-bold">About</span></h2>
+                    <h2><span class="font-weight-bold">What is Neural Data Server</span></h2>
                 </div>
                 <br>
                 <p class="text-muted mt-2">Transfer learning has proven to be a successful way to train high performing
@@ -97,15 +99,14 @@
                     in various applications for which little labeled data is available. In transfer learning, one
                     pre-trains the model on a large dataset and fine-tunes its weights
                     on the target domain. In the new era of ever increasing number of
-                    massive datasets, selecting the relevant pre-training data itself is a critical issue. To address
-                    this,
-                    we present Neural Data Server, a web-service allowing target application with its own small
-                    labeled dataset
-                    to fetch subset of data that is most relevant to their own target domains. Neural Data Server
-                    indexes several popular Machine Learning datasets in its quest to server optimal data to ML users.
+                    massive datasets, selecting the relevant pre-training data itself is a critical issue, a web search
+                    engine that uses A.I. to find the best data to pre-train your deep neural models for your target
+                    application. Neural Data Server
+                    indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users.
                 </p>
                 <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. Also checkout a
-                    2 minute <a href="https://youtu.be/I308xDHVgU4", target="_blank">demo video</a> on using of our platform.</p>
+                    2 minute <a href="https://youtu.be/I308xDHVgU4" , target="_blank">demo video</a> on how to use our
+                    platform. For further technical information about NDS please see our <a href="paper.html" target="_blank">paper</a>. </p>
                 <br>
                 <div class="mt-3 text-center">
                     <video width="80%" controls>
@@ -117,8 +118,8 @@
                 </div>
                 <br>
                 <p class="text-muted mt-2"><b>Disclaimer:</b></p>
-                <p class="text-muted mt-2"><b>* We do not host datasets. </b>In NDS we provide links to examples in
-                    existing datasets. These examples are carefully chosen for your own data and task. Below each
+                <p class="text-muted mt-2"><b>* We do not host datasets. </b>In NDS we provide links to examples from
+                    existing datasets. Below each
                     dataset we provide the license information. Please contact each dataset’s original provider for any
                     questions/licensing.</p>
                 <p class="text-muted mt-2"><b> ** Terms of Use: </b>NDS is a free service. By using NDS, in addition to
@@ -366,7 +367,7 @@
                     <br>
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
                     <ul class="list-unstyled list-inline mb-3">
-                        <li class="list-inline-item"><a href="#"><i class="mdi mdi-email text-muted"></i></a>
+                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu", target="_blank"><i class="mdi mdi-email text-muted"></i></a>
                         </li>
                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
                         </li> -->
