--- a/templates/paper.html
+++ b/templates/paper.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="paper.html">Paper</a>
+                    <a class="nav-link" href="paper.html">Paper and Team</a>
                 </li>
             </ul>
         </div>
@@ -73,6 +73,59 @@
 </section>
 <!-- END PAPER -->
 
+<section class="section bg-light" id="team">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <h2><span class="font-weight-bold">Team</span></h2>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4 pt-4">
+            <div class="col-lg-12">
+                <div class="row">
+                    <!-- <div id="owl-demo" class="owl-carousel"> -->
+                    <!-- <div class="text-center testi_boxes mx-auto"> -->
+                    <div class="col-sm">
+                        <div>
+                            <img src="/static/images/team/xi_yan.jpg" alt=""
+                                class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="100px"
+                                height="100px">
+                        </div>
+                        <p class="client_review font-italic mt-4 text-center text-muted">Xi Yan</p>
+                    </div>
+                    <!-- </div> -->
+                    <!-- <div class="text-center testi_boxes mx-auto"> -->
+                    <div class="col-sm">
+                        <div>
+                            <a href="http://www.cs.toronto.edu/~davidj/" target="_blank">
+                                <img src="/static/images/team/david_acuna.jpg" alt=""
+                                    class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="100px"
+                                    height="100px"></a>
+                        </div>
+                        <p class="client_review font-italic mt-4 text-center text-muted">David Acuna</p>
+                    </div>
+                    <!-- </div> -->
+                    <!-- <div class="text-center testi_boxes mx-auto"> -->
+                    <div class="col-sm">
+                        <div>
+                            <a href="https://www.cs.utoronto.ca/~fidler/" target="_blank">
+                                <img src="/static/images/team/sanja_fidler.jpg" alt=""
+                                    class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="100px"
+                                    height="100px">
+                            </a>
+                        </div>
+                        <p class="client_review font-italic mt-4 text-center text-muted">Sanja Fidler</p>
+                    </div>
+                    <!-- </div> -->
+                    <!-- </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!--START FOOTER-->
 <section class="section" id="footer">
     <div class="container">
@@ -86,7 +139,8 @@
                     <br>
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
                     <ul class="list-unstyled list-inline mb-3">
-                        <li class="list-inline-item"><a href="#"><i class="mdi mdi-email text-muted"></i></a>
+                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
+                                    class="mdi mdi-email text-muted"></i></a>
                         </li>
                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
                         </li> -->
