--- a/templates/index.html
+++ b/templates/index.html
@@ -43,13 +43,13 @@
                     <a class="nav-link" href="#download-subset">Download Subset</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="paper.html">Paper and Team</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="demo.html">Instructions</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contribute.html">Contribute</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="paper.html">Paper and Team</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,8 @@
                         <div class="text-center header-content mx-auto">
                             <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
-                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 150%;">A.I.-Powered Search Engine for Finding
+                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 150%;">A.I.-Powered Search
+                                Engine for Finding
                                 Best
                                 Data to Pre-Train Your Deep Neural
                                 Models
@@ -106,7 +107,8 @@
                 </p>
                 <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. Also checkout a
                     2 minute <a href="https://youtu.be/I308xDHVgU4" , target="_blank">demo video</a> on how to use our
-                    platform. For further technical information about NDS please see our <a href="paper.html" target="_blank">paper</a>. </p>
+                    platform. For further technical information about NDS please see our <a href="paper.html"
+                        target="_blank">paper</a>. </p>
                 <br>
                 <div class="mt-3 text-center">
                     <video width="80%" controls>
@@ -367,7 +369,8 @@
                     <br>
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
                     <ul class="list-unstyled list-inline mb-3">
-                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu", target="_blank"><i class="mdi mdi-email text-muted"></i></a>
+                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
+                                    class="mdi mdi-email text-muted"></i></a>
                         </li>
                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
                         </li> -->
