--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="#download-subset">Download Subset</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="demo.html">Instructions</a>
+                    <a class="nav-link" href="demo.html">Instruction</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contribute.html">Contribute</a>
