update paper, small fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,8 +68,8 @@
                         <div class="text-center header-content mx-auto">
                             <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
-                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 150%;">A.I.-Powered Search
-                                Engine for Finding
+                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 200%;">A.I.-Powered Search
+                                Engine:<br>
                                 Best
                                 Data to Pre-Train Your Deep Neural
                                 Models
@@ -100,7 +100,8 @@
                     in various applications for which little labeled data is available. In transfer learning, one
                     pre-trains the model on a large dataset and fine-tunes its weights
                     on the target domain. In the new era of ever increasing number of
-                    massive datasets, selecting the relevant pre-training data itself is a critical issue, a web search
+                    massive datasets, selecting the relevant pre-training data itself is a critical issue. To address
+                    this, we introduce Neural Data Server, a web search
                     engine that uses A.I. to find the best data to pre-train your deep neural models for your target
                     application. Neural Data Server
                     indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users.
@@ -124,11 +125,6 @@
                     existing datasets. Below each
                     dataset we provide the license information. Please contact each dataset’s original provider for any
                     questions/licensing.</p>
-                <p class="text-muted mt-2"><b> ** Terms of Use: </b>NDS is a free service. By using NDS, in addition to
-                    respecting
-                    the original dataset
-                    licenses, you agree that the data suggested to you by NDS will not be used in offensive or
-                    non-ethical A.I. applications.</p>
             </div>
         </div>
     </div>
@@ -341,6 +337,11 @@
                 source dataset cluster. Closer nodes imply higher relevancy to your dataset.
             </p>
         </div>
+        <p class="text-muted mt-2" style="font-size: 70%;"><b> * Terms of Use: </b>NDS is a free service. By using NDS, in addition to
+            respecting
+            the original dataset
+            licenses, you agree that the data suggested to you by NDS will not be used in offensive or
+            non-ethical A.I. applications.</p>
     </div>
 </section>
 <!-- <section class="section bg-light" id="link-own-dataset">
