--- a/templates/paper.html
+++ b/templates/paper.html
@@ -39,39 +39,122 @@
 </nav>
 <!-- End Navbar -->
 
-<!-- START ABSTRACT -->
 <section class="section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2><span class="font-weight-bold">Abstract</span></h2>
-                </div>
-                <br>
-                <p class="text-muted mt-2">Transfer learning has proven to be a successful way to train high performing
-                    deep learning models in various applications for which little labeled data is available. In transfer
-                    learning, one pre-trains the model on a large dataset such as Imagenet or MS-COCO, and fine-tunes
-                    its weights on the target domain. In our work, we claim that in the new era of ever increasing
-                    number of massive datasets, selecting the relevant pre-training data itself is a critical issue. We
-                    introduce a new problem in which available datasets are stored in one centralized location, i.e., a
-                    dataserver. We assume that a client, a target application with its own small labeled dataset, is
-                    only interested in fetching a subset of the server’s data that is most relevant to its own target
-                    domain. We propose a novel method that aims to optimally select subsets of data from the dataserver
-                    given a particular target client. We perform data selection by employing a mixture of experts model
-                    in a series of dataserver- client transactions with a small computational cost. We show the
-                    effectiveness of our work in several transfer learning scenarios, demonstrating state-of-the-art
-                    per- formance on several target datasets and tasks such as image classification, object detection
-                    and instance segmentation. We will make our framework available as a web-service, serving data to
-                    users trying to improve performance in their A.I. application.
-                </p>
-                <div class="mt-3 text-center">
-                    <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block">
+                    <h2><span class="font-weight-bold">What Data is Useful for My Data: Transfer Learning with a Mixture
+                            of
+                            Self-Supervised Experts</span></h2>
+                    <table align=center width=700px>
+                        <tr>
+                            <td align=center width=100px>
+                                <center>
+                                    <span style="font-size:18px"><a href="https://www.linkedin.com/in/xi-yan/">Xi
+                                            Yan</a><sup>*1,3</sup></span>
+                                </center>
+                            </td>
+                            <td align=center width=100px>
+                                <center>
+                                    <span style="font-size:18px"><a href="http://www.cs.toronto.edu/~davidj/">David
+                                            Acuna</a><sup>*1,2,3</sup></span>
+                                </center>
+                            </td>
+                            <td align=center width=100px>
+                                <center>
+                                    <span style="font-size:18px"><a href="http://www.cs.toronto.edu/~fidler/">Sanja
+                                            Fidler</a><sup>1,2,3</sup></span>
+                                </center>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <br>
+                    <table align=center width=700px>
+                        <tr>
+                            <td align=center width=100px>
+                                <center>
+                                    <span style="font-size:20px"><sup>1</sup>University of Toronto</span>
+                                </center>
+                            </td>
+                            <td align=center width=100px>
+                                <center>
+                                    <span style="font-size:20px"><sup>2</sup>NVIDIA</span>
+                                </center>
+                            </td>
+                            <td align=center width=100px>
+                                <center>
+                                    <span style="font-size:20px"><sup>3</sup>Vector Institute</span>
+                                </center>
+                            </td>
+                        </tr>
+                    </table>
+                    <br>
+                    <br>
+                    <div class="mt-3 text-center">
+                        <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block">
+                    </div>
+                    <br>
+                    <br>
+                    <p class="text-muted mt-2" style="text-align: justify;">Transfer learning has proven to be a
+                        successful way to train high
+                        performing
+                        deep learning models in various applications for which little labeled data is available. In
+                        transfer
+                        learning, one pre-trains the model on a large dataset such as Imagenet or MS-COCO, and
+                        fine-tunes
+                        its weights on the target domain. In our work, we claim that in the new era of ever increasing
+                        number of massive datasets, selecting the relevant pre-training data itself is a critical issue.
+                        We
+                        introduce a new problem in which available datasets are stored in one centralized location,
+                        i.e., a
+                        dataserver. We assume that a client, a target application with its own small labeled dataset, is
+                        only interested in fetching a subset of the server’s data that is most relevant to its own
+                        target
+                        domain. We propose a novel method that aims to optimally select subsets of data from the
+                        dataserver
+                        given a particular target client. We perform data selection by employing a mixture of experts
+                        model
+                        in a series of dataserver- client transactions with a small computational cost. We show the
+                        effectiveness of our work in several transfer learning scenarios, demonstrating state-of-the-art
+                        per- formance on several target datasets and tasks such as image classification, object
+                        detection
+                        and instance segmentation. We will make our framework available as a web-service, serving data
+                        to
+                        users trying to improve performance in their A.I. application.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- END PAPER -->
+
+<section class="section bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <h2><span class="font-weight-bold">News</span></h2>
+                    <p class="text-muted mt-2">Coming Soon</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <h2><span class="font-weight-bold">Paper</span></h2>
+                    <p class="text-muted mt-2">Coming Soon</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section class="section bg-light" id="team">
     <div class="container">
@@ -90,8 +173,8 @@
                     <div class="col-sm">
                         <div>
                             <img src="/static/images/team/xi_yan.jpg" alt=""
-                                class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="100px"
-                                height="100px">
+                                class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="180px"
+                                height="180px">
                         </div>
                         <p class="client_review font-italic mt-4 text-center text-muted">Xi Yan</p>
                     </div>
@@ -101,8 +184,8 @@
                         <div>
                             <a href="http://www.cs.toronto.edu/~davidj/" target="_blank">
                                 <img src="/static/images/team/david_acuna.jpg" alt=""
-                                    class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="100px"
-                                    height="100px"></a>
+                                    class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="180px"
+                                    height="180px"></a>
                         </div>
                         <p class="client_review font-italic mt-4 text-center text-muted">David Acuna</p>
                     </div>
@@ -111,9 +194,9 @@
                     <div class="col-sm">
                         <div>
                             <a href="https://www.cs.utoronto.ca/~fidler/" target="_blank">
-                                <img src="/static/images/team/sanja_fidler.jpg" alt=""
-                                    class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="100px"
-                                    height="100px">
+                                <img src="/static/images/team/sanja.png" alt=""
+                                    class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="180px"
+                                    height="180px">
                             </a>
                         </div>
                         <p class="client_review font-italic mt-4 text-center text-muted">Sanja Fidler</p>
