--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,9 @@
                         <div class="text-center header-content mx-auto">
                             <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
-                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 200%;">A.I.-Powered Search
+                            <p class="text-white mx-auto header-desc mt-0" style="font-size: 130%;">A.I.-Powered Search
                                 Engine:<br>
-                                Best
+                                Find Best
                                 Data to Pre-Train Your Deep Neural
                                 Models
                             </p>
@@ -92,10 +92,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2><span class="font-weight-bold">What is Neural Data Server</span></h2>
+                    <h2><span class="font-weight-bold">What is Neural Data Server?</span></h2>
                 </div>
                 <br>
-                <p class="text-muted mt-2">Transfer learning has proven to be a successful way to train high performing
+                <p class="text-muted mt-2" style="text-align: justify;">Transfer learning has proven to be a successful way to train high performing
                     deep learning models
                     in various applications for which little labeled data is available. In transfer learning, one
                     pre-trains the model on a large dataset and fine-tunes its weights
@@ -337,7 +337,8 @@
                 source dataset cluster. Closer nodes imply higher relevancy to your dataset.
             </p>
         </div>
-        <p class="text-muted mt-2" style="font-size: 70%;"><b> * Terms of Use: </b>NDS is a free service. By using NDS, in addition to
+        <p class="text-muted mt-2" style="font-size: 100%;"><b> * Terms of Use: </b>NDS is a free service. By using NDS,
+            in addition to
             respecting
             the original dataset
             licenses, you agree that the data suggested to you by NDS will not be used in offensive or
