--- a/templates/paper.html
+++ b/templates/paper.html
@@ -116,13 +116,11 @@
                         dataserver
                         given a particular target client. We perform data selection by employing a mixture of experts
                         model
-                        in a series of dataserver- client transactions with a small computational cost. We show the
+                        in a series of dataserver-client transactions with a small computational cost. We show the
                         effectiveness of our work in several transfer learning scenarios, demonstrating state-of-the-art
                         per- formance on several target datasets and tasks such as image classification, object
                         detection
-                        and instance segmentation. We will make our framework available as a web-service, serving data
-                        to
-                        users trying to improve performance in their A.I. application.
+                        and instance segmentation. 
                     </p>
                 </div>
             </div>
