--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="#download-subset">Download Subset</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="demo.html">Instruction</a>
+                    <a class="nav-link" href="demo.html">Instructions</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contribute.html">Contribute</a>
@@ -69,7 +69,7 @@
                             <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
                             <p class="text-white mx-auto header-desc mt-0" style="font-size: 130%;">A.I.-Powered Search
-                                Engine:<br>
+                                Engine for A.I.:<br>
                                 Find Best
                                 Data to Pre-Train Your Deep Neural
                                 Models
@@ -138,7 +138,7 @@
             <div class="col-lg-12">
                 <div class="text-center">
                     <h2>1. NDS <span class="font-weight-bold">Dataset Registry</span></h2>
-                    <p class="text-muted mx-auto section-subtitle mt-3">Check out our datasets we current supports. You
+                    <p class="text-muted mx-auto section-subtitle mt-3">Check out our datasets we current support. You
                         can optionally hover and download experts for adapting locally.</p>
                 </div>
             </div>
