--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,8 @@
                     <h2><span class="font-weight-bold">What is Neural Data Server?</span></h2>
                 </div>
                 <br>
-                <p class="text-muted mt-2" style="text-align: justify;">Transfer learning has proven to be a successful way to train high performing
+                <p class="text-muted mt-2" style="text-align: justify;">Transfer learning has proven to be a successful
+                    way to train high performing
                     deep learning models
                     in various applications for which little labeled data is available. In transfer learning, one
                     pre-trains the model on a large dataset and fine-tunes its weights
@@ -337,12 +338,15 @@
                 source dataset cluster. Closer nodes imply higher relevancy to your dataset.
             </p>
         </div>
-        <p class="text-muted mt-2" style="font-size: 100%;"><b> * Terms of Use: </b>NDS is a free service. By using NDS,
+        <p class="text-muted mt-2" style="font-size: 100%; text-align: justify;"><b> * Terms of Use: </b>NDS is a free service. By using NDS,
             in addition to
             respecting
             the original dataset
             licenses, you agree that the data suggested to you by NDS will not be used in offensive or
-            non-ethical A.I. applications.</p>
+            non-ethical A.I. applications. Our dataset experts are neural networks trained on subsets of the datasets.
+            Using the experts themselves for commercial applications is strictly forbidden. You are required to license
+            the data from original dataset providers.</p>
+
     </div>
 </section>
 <!-- <section class="section bg-light" id="link-own-dataset">
